# file_service

./: CMakeLists.txt  README.md  a.out  connection.cpp  connection.h  message.cpp  message.h  server.cpp  server_election.cpp  server_election.h  test.cpp
client/: CMakeLists.txt  client.cpp  main.cpp
gui_client/: CMakeLists.txt  client.cpp  client.h  create_file_dialog.cpp  create_file_dialog.h  create_file_dialog.ui  file_dialog.cpp  file_dialog.h  file_dialog.ui  file_entry.cpp  file_entry.h  file_entry.ui  file_frame.cpp  file_frame.h  file_frame.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
old/client/: main.cpp
old/server/: CMakeLists.txt  groups.h  ordered_lock.h
old/slave/: fs.cpp
server/: CMakeLists.txt  main.cpp  messages.h  server.cpp  server_election.cpp  server_election.h  server_proxy.cpp  server_proxy.h
slave/: CMakeLists.txt  file_service.cpp  file_service.h  fileop.h  fs.cpp  fs.h  main.cpp  slave.cpp
utils/: CMakeLists.txt  client_ops.h  connection.cpp  connection.h  file_lock_map.cpp  file_lock_map.h  file_ops.h  groups.h  message.cpp  message.h  ops.h  ordered_lock.h  server_ops.h  slave_ops.h
